--- a/web/app/themes/ilsfa/assets/styles/pages/_programs.scss
+++ b/web/app/themes/ilsfa/assets/styles/pages/_programs.scss
@@ -1,6 +1,10 @@
 // Programs
 
 .single-program {
+  .page-header.tertiary {
+    background: $blurple;
+    padding-bottom: grid(2);
+  }
   // Main content + featured image + stat block
   .content-image-stat {
     // Sidebar image styles for mobile
